--- a/index.html
+++ b/index.html
@@ -268,9 +268,7 @@
       border-radius: 0.4rem;
       margin-bottom: 0.4rem;
       padding: 0.5rem 0.8rem;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+      display: flex; align-items: center; justify-content: space-between;
       color: #fff;
       font-family: 'Poppins', sans-serif;
       font-size: 1rem;
@@ -287,21 +285,7 @@
       padding: 0.25rem 0.6rem;
       border-radius: 1rem;
       margin-right: 0.8rem;
-      position: absolute;
-      left: -2.5rem;
-    }
-
-    #fade-screen {
-      position: absolute;
-      inset: 0;
-      background: #000;
-      opacity: 0;
-      pointer-events: none;
-      z-index: 10;
-      transition: opacity 0.6s ease-in-out;
-    }
-    #fade-screen.fade-in {
-      opacity: 1;
+      position: absolute; left: -2.5rem;
     }
   </style>
 </head>
@@ -312,7 +296,6 @@
   <div class="bg-cloud four"></div>
 
   <div id="start-screen">
-    <!-- User info & login on home screen -->
     <div id="user-info">
       User: <strong id="username">Guest</strong>
       <button class="btn-secondary" id="loginBtn">Login</button>
@@ -334,7 +317,6 @@
     </div>
   </div>
 
-  <!-- Full-screen Leaderboard Overlay -->
   <div id="leaderboard-screen">
     <button class="btn-primary" id="closeLeaderboardBtn">Close</button>
     <h2>Top 100 Leaderboard</h2>
@@ -349,7 +331,7 @@
     <h1 style="color: #fff; font-size: 5rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.7px #0F3D75;">GAME OVER</h1>
     <div class="result-wrapper">
       <div class="orb-bg" style="display:none;"></div>
-      <div class="results" style="color: #fff; font-size: 2rem; font-weight: 600; text-align: center;text-shadow: 0 0 4px #000; text-transform: uppercase;">
+      <div class="results" style="color: #fff; font-size: 2rem; font-weight: 600; text-align: center; text-shadow: 0 0 4px #000; text-transform: uppercase;">
         SCORE: <span id="finalScore">0</span><br/>
         BEST: <span id="bestScore">0</span>
       </div>
@@ -454,6 +436,7 @@
       const cx=cam.centerX, cy=cam.centerY;
       LANES[0]=cy-radius; LANES[1]=cy; LANES[2]=cy+radius;
 
+      // Generate textures…
       this.make.graphics({add:false})
         .fillStyle(0xffffff,0.04).fillCircle(50,50,30)
         .fillStyle(0xffffff,1).fillCircle(50,50,20)
@@ -485,15 +468,24 @@
       obstacles=this.physics.add.group();
       points=this.physics.add.group();
 
-      scoreText=this.add.text(16,16,'Score: 0',{
-        fontFamily:'Poppins', fontSize:'36px',
-        color:'#fff', stroke:'#000', strokeThickness:4
+      // Styled score text consistent with home screen
+      scoreText=this.add.text(16,16,'SCORE: 0',{
+        fontFamily:'Poppins',
+        fontSize:'36px',
+        color:'#fff',
+        stroke:'#0F3D75',
+        strokeThickness:1,
+        shadowOffsetX:2,
+        shadowOffsetY:2,
+        shadowColor:'#000',
+        shadowBlur:4
       }).setDepth(2).setVisible(false);
 
       if (useLocalHighScore) {
         highScore = Number(localStorage.getItem('tricky_high_score')) || 0;
       }
 
+      // Pause/play/mute icons
       const gfx=this.make.graphics({add:false});
       gfx.fillStyle(0x000000,0.3).fillRoundedRect(0,0,56,56,12)
          .fillStyle(0xffffff,1).fillRoundedRect(14,12,8,32,4).fillRoundedRect(34,12,8,32,4);
@@ -640,7 +632,7 @@
             fadeOut(() => {
               gameStarted = true;
               document.querySelector('canvas').style.visibility = 'visible';
-              scoreText.setText('Score: 0');
+              scoreText.setText('SCORE: 0');
               scoreText.setVisible(true);
               pauseIcon.setVisible(true);
               scheduleSpawn();
@@ -735,7 +727,7 @@
       pt.destroy();
       score++;
       sfx.point.play();
-      scoreText.setText('Score: '+score);
+      scoreText.setText('SCORE: '+score);
       this.tweens.add({
         targets:scoreText,
         scaleX:1.1, scaleY:1.1,
