--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     }
     #leaderboard-screen button {
       position:absolute; top:1rem; right:1rem;
-      background:#FF4A4A; color:#fff;
+      background:#3EAFF6; color:#fff;
       border:none; border-radius:0.3rem;
       padding:0.5rem 1rem; font-weight:700;
       cursor:pointer;
