--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       z-index:3; cursor:pointer;
     }
     #game-over-screen h2 {
-      font-family:'Poppins',sans-serif; color:#FF4A4A; font-size:6rem; font-weight:700;
+      font-family:'Poppins',sans-serif; color:#3EAFF6; font-size:6rem; font-weight:700;
       text-transform:uppercase; letter-spacing:.1rem; -webkit-text-stroke:1px #000;
     }
     .result-wrapper { position:relative; width:300px; height:300px; }
@@ -276,7 +276,7 @@
   #leaderboard li::before,
   #leaderboardEntriesHome li::before {
     content: attr(data-rank);
-    background: #FF4A4A;
+    background: #3EAFF6;
     color: #fff;
     font-weight: 700;
     font-size: 0.9rem;
