mute on homepage

--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ function create() {
 
       pauseIcon = this.add.image(cam.width - 40, 40, 'iconPause')
                     .setInteractive().setDepth(3).setVisible(false);
-      const muteIcon=this.add.image(cam.width-100,40,'iconUnmute')
+      const muteIcon=this.add.image(cam.width-100,40,'iconMute')
                        .setInteractive().setDepth(3).setVisible(false);
       pauseOverlay=document.getElementById('pause-overlay');
 
