--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ function create() {
 
       pauseIcon = this.add.image(cam.width - 40, 40, 'iconPause')
                     .setInteractive().setDepth(3).setVisible(false);
-      const muteIcon=this.add.image(cam.width-100,40,'iconMute')
+      const muteIcon=this.add.image(cam.width-100,40,'iconUnmute')
                        .setInteractive().setDepth(3).setVisible(false);
       pauseOverlay=document.getElementById('pause-overlay');
 
@@ -626,7 +626,7 @@ function create() {
       muteIcon.on('pointerdown',()=>{
         isMuted=!isMuted;
         this.sound.mute=isMuted;
-        muteIcon.setTexture(isMuted?'iconMute':'iconUnmute');
+        muteIcon.setTexture(isMuted?'iconUnmute':'iconMute');
         if(!isMuted) sfx.uiClick.play();
       });
 
