--- a/latest.html
+++ b/latest.html
@@ -32,7 +32,7 @@
     #user-info button {
       background:rgba(255,255,255,0.8);
       border:none; border-radius:0.3rem;
-      padding:0.2rem 0.6rem; font-weight: 600; cursor:pointer;
+      padding:0.2rem 0.6rem; font-weight:700; cursor:pointer;
     }
 
     /* clouds visible but don’t catch taps */
@@ -59,14 +59,14 @@
     }
     #start-screen h1 {
     color: #fff;
-    font-size: 4rem;
-    font-weight: 600;
+    font-size: 5rem;
+    font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
     text-align: center;
     line-height: 1.1;
     text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3);
-    -webkit-text-stroke: 0.6px #0F3D75;
+    -webkit-text-stroke: 0.7px #0F3D75;
   }
   @media (max-width: 600px) {
     #start-screen h1 {
@@ -79,7 +79,7 @@
     background: #3EAFF6;
     color: #fff;
     font-size: 1.4rem;
-    font-weight: 600;
+    font-weight: 700;
     padding: 0.8rem 2.5rem;
     border: none;
     border-radius: 2rem;
@@ -120,7 +120,7 @@
       background: #3EAFF6;
       color: #fff;
       font-size: 1.4rem;
-      font-weight: 600;
+      font-weight: 700;
       padding: 0.8rem 2.5rem;
       border: none;
       border-radius: 2rem;
@@ -171,7 +171,7 @@
       background:rgba(0,0,0,0.4); z-index:4; pointer-events:none;
     }
     #pause-overlay .paused-text {
-      font-family:'Poppins',sans-serif; font-size:4rem; font-weight: 600;
+      font-family:'Poppins',sans-serif; font-size:4rem; font-weight:700;
       color:#fff; text-transform:uppercase; letter-spacing:.1rem;
       -webkit-text-stroke:1px #000;
     }
@@ -182,7 +182,7 @@
       z-index:3; cursor:pointer;
     }
     #game-over-screen h2 {
-      font-family:'Poppins',sans-serif; color:#3EAFF6; font-size:4rem; font-weight: 600;
+      font-family:'Poppins',sans-serif; color:#3EAFF6; font-size:6rem; font-weight:700;
       text-transform:uppercase; letter-spacing:.1rem; -webkit-text-stroke:1px #000;
     }
     .result-wrapper { position:relative; width:300px; height:300px; }
@@ -193,7 +193,7 @@
     }
     .results {
       position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
-      color:#fff; font-size:2rem; font-weight: 600;
+      color:#fff; font-size:2.4rem; font-weight:700;
       text-transform:uppercase; letter-spacing:.15rem;
       -webkit-text-stroke:2px #000; text-align:center; line-height:1.3;
     }
@@ -231,7 +231,7 @@
       position:absolute; top:1rem; right:1rem;
       background:#3EAFF6; color:#fff;
       border:none; border-radius:0.3rem;
-      padding:0.5rem 1rem; font-weight: 600;
+      padding:0.5rem 1rem; font-weight:700;
       cursor:pointer;
     }
     #leaderboard-screen ol {
@@ -267,7 +267,7 @@
     content: attr(data-rank);
     background: #3EAFF6;
     color: #fff;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 0.9rem;
     padding: 0.25rem 0.6rem;
     border-radius: 1rem;
@@ -413,7 +413,7 @@
    </div>
   </div>
   <div id="game-over-screen" style="flex-direction: column; align-items: center; justify-content: center; gap: 2rem; z-index: 3;">
-   <h1 style="color: #fff; font-size: 5rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.6px #0F3D75;">
+   <h1 style="color: #fff; font-size: 5rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.1rem; text-align: center; line-height: 1.1; text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.3); -webkit-text-stroke: 0.7px #0F3D75;">
     GAME OVER
    </h1>
    <div class="result-wrapper">
@@ -623,13 +623,12 @@ function create() {
       sfx.pauseWhoosh= this.sound.add('pauseWhoosh');
 
       // mute toggle
-muteIcon.on('pointerdown', () => {
-  isMuted = !isMuted;
-  this.sound.setMute(isMuted);  // ✅ Phaser 3 official method
-  muteIcon.setTexture(isMuted ? 'iconMute' : 'iconUnmute');
-  if (!isMuted) sfx.uiClick.play();
-});
-
+      muteIcon.on('pointerdown',()=>{
+        isMuted=!isMuted;
+        this.sound.mute=isMuted;
+        muteIcon.setTexture(isMuted?'iconUnmute':'iconMute');
+        if(!isMuted) sfx.uiClick.play();
+      });
 
       // pause/play toggle
       pauseIcon.on('pointerdown',(_,x,y,e)=>{
